--- a/index.html
+++ b/index.html
@@ -4,13 +4,82 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Machine virtuelle</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-
+<header>
+  <!-------------------nav bar-------------------->
+  <nav class="main-nav">
+  <div>
+    <a href="index.html">
+      <img src="assets/img/bash%20logo.png" alt="bash logo" id="img-nav">
+    </a>
+  </div>
+  <div class="nav-container">
+    <a href="index.html">Accueil</a>
+  </div>
+  <div class="nav-container">
+    <a href="machine.html">definition</a>
+  </div>
+  <div class="nav-container">
+    <a href="installation.html">installation</a>
+  </div>
+</nav>
+  <!-----------------end nav bar-------------------->
+</header>
 <body>
-
-  <p>Hello world!</p>
-
+  <!------------------Carousel---------------------->
+  <div id="carouselExampleCaptions" class="carousel slide">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets/img/test.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Introduction à la machine virtuelle</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet quam et massa sollicitudin condimentum vitae sed velit. Praesent bibendum
+            eleifend ligula a eleifend. Maecenas at nulla orci. Vestibulum vitae nibh porttitor, tincidunt nibh at, congue elit. Ut ornare magna sem,
+            at sollicitudin mi accumsan ut. Mauris in libero orci. Mauris viverra eu sapien a iaculis. Nam at congue dui. Sed quis orci ac lacus sodales viverra.
+            Curabitur in imperdiet neque. Maecenas in velit ligula.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/ingenieur.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Comment installer une machine virtuelle</h5>
+          <<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet quam et massa sollicitudin condimentum vitae sed velit. Praesent bibendum
+          eleifend ligula a eleifend. Maecenas at nulla orci. Vestibulum vitae nibh porttitor, tincidunt nibh at, congue elit. Ut ornare magna sem,
+          at sollicitudin mi accumsan ut. Mauris in libero orci. Mauris viverra eu sapien a iaculis. Nam at congue dui. Sed quis orci ac lacus sodales viverra.
+          Curabitur in imperdiet neque. Maecenas in velit ligula.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Third slide label</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <!----------------end Carousel-------------------->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
+<footer>
+  <p>©</p>
+
+</footer>
 </html>
