footer et page de definition

--- a/machine.html
+++ b/machine.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Machine virtuelle</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/machine.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 </head>
@@ -29,9 +30,42 @@
   <!-----------------end nav bar-------------------->
 </header>
 <body>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet quam et massa sollicitudin condimentum vitae sed velit. Praesent bibendum eleifend ligula a eleifend. Maecenas at nulla orci. Vestibulum vitae nibh porttitor, tincidunt nibh at, congue elit. Ut ornare magna sem, at sollicitudin mi accumsan ut. Mauris in libero orci. Mauris viverra eu sapien a iaculis. Nam at congue dui. Sed quis orci ac lacus sodales viverra. Curabitur in imperdiet neque. Maecenas in velit ligula.</p>
+
+<div class="container">
+  <div class="image">
+    <img src="assets/img/machine-vir.jpg" alt="image d'une machine virtuelle simplifiée">
+  </div>
+  <div class="text">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet
+      quam et massa sollicitudin condimentum vitae sed velit. Praesent bibendum eleifend
+      ligula a eleifend. Maecenas at nulla orci. Vestibulum vitae nibh porttitor, tincidunt
+      nibh at, congue elit. Ut ornare magna sem, at sollicitudin mi accumsan ut. Mauris in libero orci.
+      Mauris viverra eu sapien a iaculis. Nam at congue dui. Sed quis orci ac lacus sodales viverra.
+      Curabitur in imperdiet neque. Maecenas in velit ligula.
+    </p>
+  </div>
+</div>
+
+<div class="container">
+  <div class="text">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet
+      quam et massa sollicitudin condimentum vitae sed velit. Praesent bibendum eleifend
+      ligula a eleifend. Maecenas at nulla orci. Vestibulum vitae nibh porttitor, tincidunt
+      nibh at, congue elit. Ut ornare magna sem, at sollicitudin mi accumsan ut. Mauris in libero orci.
+      Mauris viverra eu sapien a iaculis. Nam at congue dui. Sed quis orci ac lacus sodales viverra.
+      Curabitur in imperdiet neque. Maecenas in velit ligula.
+    </p>
+  </div>
+  <div class="image">
+    <img src="assets/img/Diagramme_ArchiIsolateur.png" alt="diagramme de l'architecture d'une machine virtuelle">
+  </div>
+</div>
+
 </body>
 <footer>
-
+  <div class="container-footer">
+    <p>Groupe jsp quoi <br>
+    supportIut@gmail.com</p>
+  </div>
 </footer>
 </html>
