--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
         <img src="assets/img/ingenieur.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Comment installer une machine virtuelle</h5>
-          <<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet quam et massa sollicitudin condimentum vitae sed velit. Praesent bibendum
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet quam et massa sollicitudin condimentum vitae sed velit. Praesent bibendum
           eleifend ligula a eleifend. Maecenas at nulla orci. Vestibulum vitae nibh porttitor, tincidunt nibh at, congue elit. Ut ornare magna sem,
           at sollicitudin mi accumsan ut. Mauris in libero orci. Mauris viverra eu sapien a iaculis. Nam at congue dui. Sed quis orci ac lacus sodales viverra.
           Curabitur in imperdiet neque. Maecenas in velit ligula.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="assets/img/tuto.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
           <p>Some representative placeholder content for the third slide.</p>
