--- a/installation.html
+++ b/installation.html
@@ -13,7 +13,7 @@
     <nav class="main-nav">
         <div>
             <a href="index.html">
-                <img src="assets/img/bash%20logo.png" alt="bash logo" id="img-nav">
+                <img src="assets/img/img-acceuil/bash%20logo.png" alt="bash logo" id="img-nav">
             </a>
         </div>
         <div class="nav-container">
@@ -29,9 +29,18 @@
     <!-----------------end nav bar-------------------->
 </header>
 <body>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet quam et massa sollicitudin condimentum vitae sed velit. Praesent bibendum eleifend ligula a eleifend. Maecenas at nulla orci. Vestibulum vitae nibh porttitor, tincidunt nibh at, congue elit. Ut ornare magna sem, at sollicitudin mi accumsan ut. Mauris in libero orci. Mauris viverra eu sapien a iaculis. Nam at congue dui. Sed quis orci ac lacus sodales viverra. Curabitur in imperdiet neque. Maecenas in velit ligula.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    Maecenas sit amet quam et massa sollicitudin condimentum vitae sed velit.
+    Praesent bibendum eleifend ligula a eleifend. Maecenas at nulla orci. Vestibulum vitae
+    nibh porttitor, tincidunt nibh at, congue elit. Ut ornare magna sem, at sollicitudin mi
+    accumsan ut. Mauris in libero orci. Mauris viverra eu sapien a iaculis. Nam at congue dui.
+    Sed quis orci ac lacus sodales viverra. Curabitur in imperdiet neque. Maecenas in velit ligula.
+</p>
 </body>
 <footer>
-
+    <div class="container-footer">
+        <p>Groupe 2, 101 <br>
+            supportIut@gmail.com</p>
+    </div>
 </footer>
 </html>
