--- a/machine.html
+++ b/machine.html
@@ -14,7 +14,7 @@
   <nav class="main-nav">
     <div>
       <a href="index.html">
-        <img src="assets/img/bash%20logo.png" alt="bash logo" id="img-nav">
+        <img src="assets/img/img-acceuil/bash%20logo.png" alt="bash logo" id="img-nav">
       </a>
     </div>
     <div class="nav-container">
@@ -33,39 +33,49 @@
 
 <div class="container">
   <div class="image">
-    <img src="assets/img/machine-vir.jpg" alt="image d'une machine virtuelle simplifiée">
+    <img src="assets/img/img-def/machine-vir.jpg" alt="image d'une machine virtuelle simplifiée">
   </div>
   <div class="text">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet
-      quam et massa sollicitudin condimentum vitae sed velit. Praesent bibendum eleifend
-      ligula a eleifend. Maecenas at nulla orci. Vestibulum vitae nibh porttitor, tincidunt
-      nibh at, congue elit. Ut ornare magna sem, at sollicitudin mi accumsan ut. Mauris in libero orci.
-      Mauris viverra eu sapien a iaculis. Nam at congue dui. Sed quis orci ac lacus sodales viverra.
-      Curabitur in imperdiet neque. Maecenas in velit ligula.
+    <p>Une machine virtuelle, également appelée VM (Virtual Machine), est un environnement informatique virtuel
+      qui fonctionne sur un matériel physique grâce à un logiciel appelé hyperviseur. Elle permet d’émuler le
+      comportement d’un ordinateur physique, y compris le processeur, la mémoire vive, le disque dur et la carte
+      réseau, tout en exécutant son propre système d’exploitation. Les machines virtuelles permettent d’exécuter
+      simultanément plusieurs systèmes d’exploitation différents sur un seul serveur physique, ce qui offre divers
+      avantages tels que la portabilité, la sécurité et l’optimisation des ressources matérielles.
     </p>
   </div>
 </div>
 
 <div class="container">
   <div class="text">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet
-      quam et massa sollicitudin condimentum vitae sed velit. Praesent bibendum eleifend
-      ligula a eleifend. Maecenas at nulla orci. Vestibulum vitae nibh porttitor, tincidunt
-      nibh at, congue elit. Ut ornare magna sem, at sollicitudin mi accumsan ut. Mauris in libero orci.
-      Mauris viverra eu sapien a iaculis. Nam at congue dui. Sed quis orci ac lacus sodales viverra.
-      Curabitur in imperdiet neque. Maecenas in velit ligula.
+    <p>Les machines virtuelles sont utilisées en multitâches, c'est-à-dire
+      permettre à l'ordinateur de réaliser plusieurs opérations simultanément au service de plusieurs utilisateurs.
+      Une machine virtuelle est affectée à chaque utilisateur, lui donnant l'illusion qu'il est le seul à utiliser l'ordinateur.
+      Cette fonctionnalité est maintenant incluse dans tous les systèmes d'exploitation
     </p>
   </div>
   <div class="image">
-    <img src="assets/img/Diagramme_ArchiIsolateur.png" alt="diagramme de l'architecture d'une machine virtuelle">
+    <img src="assets/img/img-def/Diagramme_ArchiIsolateur.png" alt="diagramme de l'architecture d'une machine virtuelle">
   </div>
 </div>
-
+<div class="avantage">
+  <h3>Avantages et Inconvénients </h3>
+  <table>
+    <tr>
+      <th>Cellule 1</th>
+      <th>Cellule 2</th>
+    </tr>
+    <tr>
+      <td>Cellule 3</td>
+      <td>Cellule 4</td>
+    </tr>
+  </table>
+</div>
 </body>
 <footer>
   <div class="container-footer">
-    <p>Groupe jsp quoi <br>
-    supportIut@gmail.com</p>
+    <p>Groupe 2, 101 <br>
+      supportIut@gmail.com</p>
   </div>
 </footer>
 </html>
