--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav class="main-nav">
   <div>
     <a href="index.html">
-      <img src="assets/img/bash%20logo.png" alt="bash logo" id="img-nav">
+      <img src="assets/img/img-acceuil/bash%20logo.png" alt="bash logo" id="img-nav">
     </a>
   </div>
   <div class="nav-container">
@@ -39,30 +39,31 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/img/test.jpg" class="d-block w-100" alt="...">
+        <img src="assets/img/img-acceuil/cpu.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Introduction à la machine virtuelle</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet quam et massa sollicitudin condimentum vitae sed velit. Praesent bibendum
-            eleifend ligula a eleifend. Maecenas at nulla orci. Vestibulum vitae nibh porttitor, tincidunt nibh at, congue elit. Ut ornare magna sem,
-            at sollicitudin mi accumsan ut. Mauris in libero orci. Mauris viverra eu sapien a iaculis. Nam at congue dui. Sed quis orci ac lacus sodales viverra.
-            Curabitur in imperdiet neque. Maecenas in velit ligula.</p>
+          <p>Une machine virtuelle est un environnement informatique isolé qui simule les ressources
+            d’un ordinateur physique, permettant l’exécution d’un système d’exploitation et d’applications.
+            Elle est composée de fichiers de spécification et de configuration et est soutenue par les ressources physiques d’un hôte.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="assets/img/ingenieur.jpg" class="d-block w-100" alt="...">
+        <img src="assets/img/img-acceuil/ingenieur.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Comment installer une machine virtuelle</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet quam et massa sollicitudin condimentum vitae sed velit. Praesent bibendum
-          eleifend ligula a eleifend. Maecenas at nulla orci. Vestibulum vitae nibh porttitor, tincidunt nibh at, congue elit. Ut ornare magna sem,
-          at sollicitudin mi accumsan ut. Mauris in libero orci. Mauris viverra eu sapien a iaculis. Nam at congue dui. Sed quis orci ac lacus sodales viverra.
-          Curabitur in imperdiet neque. Maecenas in velit ligula.</p>
+          <p>
+            Un tutoriel est proposé sur comment installer une machine virtuelle avec le logiciel <b>Oracle VirtualBox</b> et l'installation d'un OS notamment avec Mint
+          </p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="assets/img/tuto.jpg" class="d-block w-100" alt="...">
+        <img src="assets/img/img-acceuil/tuto.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          <h5>Configuration des comptes et mise en ligne d'une page web</h5>
+          <p>Il est aussi proposer un tutoriel sur la configuration et la création d'un compte administrateur et d'un compte utilisateur
+            et ensuite transformer votre machine virtuelle en hébergeur de site.
+
+          </p>
         </div>
       </div>
     </div>
@@ -80,7 +81,7 @@
 </body>
 <footer>
   <div class="container-footer">
-    <p>Groupe jsp quoi <br>
+    <p>Groupe 2, 101 <br>
       supportIut@gmail.com</p>
   </div>
 </footer>
