--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </body>
 <footer>
   <div class="container-footer">
-    <p>Groupe jsp quoi <br>
+    <p>Groupe 02 <br>
       supportIut@gmail.com</p>
   </div>
 </footer>
