--- a/installation.html
+++ b/installation.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Machine virtuelle</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/installation.css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <header>
     <!-------------------nav bar-------------------->
@@ -29,13 +30,55 @@
     <!-----------------end nav bar-------------------->
 </header>
 <body>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Maecenas sit amet quam et massa sollicitudin condimentum vitae sed velit.
-    Praesent bibendum eleifend ligula a eleifend. Maecenas at nulla orci. Vestibulum vitae
-    nibh porttitor, tincidunt nibh at, congue elit. Ut ornare magna sem, at sollicitudin mi
-    accumsan ut. Mauris in libero orci. Mauris viverra eu sapien a iaculis. Nam at congue dui.
-    Sed quis orci ac lacus sodales viverra. Curabitur in imperdiet neque. Maecenas in velit ligula.
-</p>
+    <div id ="scroll" >
+
+        <a href="#a_propos" > SCROLL </a>
+    </div>
+    <div id="img_accueil">
+        <img src="assets/img/Linux1.jpg" alt="" width="100%" height="auto"/>
+    </div>
+
+    <main>
+        <section id="a_propos">
+            <h2>
+                A PROPOS
+            </h2>
+            <br><br>
+            <p>
+                Une machine virtuelle est un environnement informatique isolé qui simule les ressources
+                d’un ordinateur physique, permettant l’exécution d’un système d’exploitation et d’applications.
+                Elle est composée de fichiers de spécification et de configuration et est soutenue par les ressources physiques d’un hôte.
+            </p>
+            <br>
+            <p>
+                Un tutoriel est proposé sur comment installer une machine virtuelle avec le logiciel <b>Oracle VirtualBox</b>
+                et l'installation d'un OS notamment avec Mint
+            </p>
+            <br>
+        </section>
+
+        <section id="actions">
+            <br><br><br>
+            <h2>
+                Différentes <i> étapes </i>
+            </h2>
+            <br><br>
+            <div class="image">
+
+                <a href="installationVM.html"><img src="assets/img/img-acceuil/ingenieur.jpg" alt=""  /></a>
+                <a href="créationVM.html"><img src="assets/img/img-acceuil/ingenieur.jpg" alt=""  /></a>
+                <a href="installationVM.html"><img src="assets/img/img-acceuil/ingenieur.jpg" alt=""  /></a>
+                <a href="installationVM.html"><img src="assets/img/img-acceuil/ingenieur.jpg" alt=""  /></a>
+            </div>
+        </section>
+
+    </main>
+
+
+
+
+
+
 </body>
 <footer>
     <div class="container-footer">
