--- a/installationVM.html
+++ b/installationVM.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Machine virtuelle</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/installation.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/installationVM.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -29,6 +30,87 @@
     </nav>
     <!-----------------end nav bar-------------------->
 </header>
+<body>
+    <main>
+        <section class="image">
+            <h2 > Choix de la VMWare : Virtual Box </h2>
+            <article class="oracle">
+                <p> Fournir des espaces de travail sécurisés et cryptés. VirtualBox sécurise les connexions à distance aux applications
+                    restreintes grâce à des clés de chiffrement de 256 bits, et garantit que les utilisateurs ne peuvent pas télécharger
+                    ou stocker des données sur des terminaux distants. </p>
+                <img src="assets/img/img-installationVM/virtualbox-oracle.jpg">
+            </article>
+
+            <h2> Etape de l'installation</h2>
+            <article class="etapes">
+                <img src="assets/img/img-installationVM/souswindows.png">
+                <p> Fournir des espaces de travail sécurisés et cryptés. VirtualBox sécurise les connexions à distance aux applications
+                    restreintes grâce à des clés de chiffrement de 256 bits, et garantit que les utilisateurs ne peuvent pas télécharger
+                    ou stocker des données sur des terminaux distants. </p>
+            </article>
+
+            <article class="etapes">
+                <img src="assets/img/img-installationVM/oracle1.png">
+                <p> Fournir des espa
+                    ou stocker des données sur des terminaux distants. </p>
+            </article>
+
+            <article class="etapes">
+                <img src="assets/img/img-installationVM/oracle2.png">
+                <p> Fournir des espa
+                    ou stocker des données sur des terminaux distants. </p>
+            </article>
+
+            <article class="etapes">
+                <img src="assets/img/img-installationVM/oracle3.png">
+                <p> Fournir des espa
+                    ou stocker des données sur des terminaux distants. </p>
+            </article>
+
+            <article class="etapes">
+                <img src="assets/img/img-installationVM/oracle4.png">
+                <p> Fournir des espa
+                    ou stocker des données sur des terminaux distants. </p>
+            </article>
+
+            <article class="etapes">
+                <img src="assets/img/img-installationVM/oracle5.png">
+                <p> Fournir des espa
+                    ou stocker des données sur des terminaux distants. </p>
+            </article>
+
+            <article class="etapes">
+                <img src="assets/img/img-installationVM/oracle6.png">
+                <p> Fournir des espa
+                    ou stocker des données sur des terminaux distants. </p>
+            </article>
+
+            <article class="etapes">
+                <img src="assets/img/img-installationVM/oracle7.png">
+                <p> Fournir des espa
+                    ou stocker des données sur des terminaux distants. </p>
+            </article>
+
+            <article class="etapes">
+                <img src="assets/img/img-installationVM/oracle8.png">
+                <p> Fournir des espa
+                    ou stocker des données sur des terminaux distants. </p>
+            </article>
+
+            <article class="etapes">
+                <img src="assets/img/img-installationVM/oracle9.png">
+                <p> Fournir des espa
+                    ou stocker des données sur des terminaux distants. </p>
+            </article>
+
+
+
+
+        </section>
+    </main>
+
+
+</body>
 
 
 
