--- a/installation.html
+++ b/installation.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Machine virtuelle</title>
     <link rel="stylesheet" type="text/css" href="assets/css/installation.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -35,7 +36,7 @@
         <a href="#a_propos" > SCROLL </a>
     </div>
     <div id="img_accueil">
-        <img src="assets/img/Linux1.jpg" alt="" width="100%" height="auto"/>
+        <img src="assets/img/img-installation/Linux1.jpg" alt="" width="100%" height="auto"/>
     </div>
 
     <main>
@@ -65,10 +66,10 @@
             <br><br>
             <div class="image">
 
-                <a href="installationVM.html"><img src="assets/img/img-acceuil/ingenieur.jpg" alt=""  /></a>
-                <a href="créationVM.html"><img src="assets/img/img-acceuil/ingenieur.jpg" alt=""  /></a>
-                <a href="installationVM.html"><img src="assets/img/img-acceuil/ingenieur.jpg" alt=""  /></a>
-                <a href="installationVM.html"><img src="assets/img/img-acceuil/ingenieur.jpg" alt=""  /></a>
+                <a href="installationVM.html"><img src="assets/img/img-installation/VMWare-Virtual-Box.png" alt=""  /></a>
+                <a href="créationVM.html"><img src="assets/img/img-installation/VMWare-Virtual-Box.png" alt=""  /></a>
+                <a href="creationpersonne.html"><img src="assets/img/img-installation/VMWare-Virtual-Box.png" alt=""  /></a>
+                <a href="placement.html"><img src="assets/img/img-installation/VMWare-Virtual-Box.png" alt=""  /></a>
             </div>
         </section>
 
