--- a/creationpersonne.html
+++ b/creationpersonne.html
@@ -33,75 +33,82 @@
 <body>
 <main>
     <section class="image">
-        <h2 > Choix de la VMWare : Virtual Box </h2>
-        <article class="oracle">
+        <h2> Etape de l'installation</h2>
+        <article class="etapes">
+            <img src="assets/img/img-creationpersonne/img.png">
             <p> Fournir des espaces de travail sécurisés et cryptés. VirtualBox sécurise les connexions à distance aux applications
                 restreintes grâce à des clés de chiffrement de 256 bits, et garantit que les utilisateurs ne peuvent pas télécharger
                 ou stocker des données sur des terminaux distants. </p>
-            <img src="assets/img/img-installationVM/virtualbox-oracle.jpg">
+        </article>
+
+        <article class="etapes">
+            <img src="assets/img/img-creationpersonne/img_1.png">
+            <p> Fournir des espa
+                ou stocker des données sur des terminaux distants. </p>
+        </article>
+
+        <article class="etapes">
+            <img src="assets/img/img-creationpersonne/img_2.png">
+            <p> Fournir des espa
+                ou stocker des données sur des terminaux distants. </p>
+        </article>
+
+        <article class="etapes">
+            <img src="assets/img/img-creationpersonne/img_3.png">
+            <p> Fournir des espa
+                ou stocker des données sur des terminaux distants. </p>
+        </article>
+
+        <article class="etapes">
+            <img src="assets/img/img-creationpersonne/img_4.png">
+            <p> Fournir des espa
+                ou stocker des données sur des terminaux distants. </p>
+        </article>
+
+        <article class="etapes">
+            <img src="assets/img/img-creationpersonne/img_5.png">
+            <p> Fournir des espa
+                ou stocker des données sur des terminaux distants. </p>
+        </article>
+
+        <article class="etapes">
+            <img src="assets/img/img-creationpersonne/img_6.png">
+            <p> Fournir des espa
+                ou stocker des données sur des terminaux distants. </p>
+        </article>
+
+        <article class="etapes">
+            <img src="assets/img/img-creationpersonne/img_7.png">
+            <p> Fournir des espa
+                ou stocker des données sur des terminaux distants. </p>
         </article>
 
         <h2> Etape de l'installation</h2>
         <article class="etapes">
-            <img src="assets/img/img-installationVM/souswindows.png">
-            <p> Fournir des espaces de travail sécurisés et cryptés. VirtualBox sécurise les connexions à distance aux applications
-                restreintes grâce à des clés de chiffrement de 256 bits, et garantit que les utilisateurs ne peuvent pas télécharger
-                ou stocker des données sur des terminaux distants. </p>
-        </article>
-
-        <article class="etapes">
-            <img src="assets/img/img-installationVM/oracle1.png">
+            <img src="assets/img/img-creationpersonne/img_8.png">
             <p> Fournir des espa
                 ou stocker des données sur des terminaux distants. </p>
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-installationVM/oracle2.png">
+            <img src="assets/img/img-creationpersonne/img_9.png">
+            <p> Fournir des espa
+                ou stocker des données sur des terminaux distants. </p>
+        </article>
+
+        <h2> Etape de l'installation</h2>
+        <article class="etapes">
+            <img src="assets/img/img-creationpersonne/img_10.png">
             <p> Fournir des espa
                 ou stocker des données sur des terminaux distants. </p>
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-installationVM/oracle3.png">
+            <img src="assets/img/img-creationpersonne/img_11.png">
             <p> Fournir des espa
                 ou stocker des données sur des terminaux distants. </p>
         </article>
 
-        <article class="etapes">
-            <img src="assets/img/img-installationVM/oracle4.png">
-            <p> Fournir des espa
-                ou stocker des données sur des terminaux distants. </p>
-        </article>
-
-        <article class="etapes">
-            <img src="assets/img/img-installationVM/oracle5.png">
-            <p> Fournir des espa
-                ou stocker des données sur des terminaux distants. </p>
-        </article>
-
-        <article class="etapes">
-            <img src="assets/img/img-installationVM/oracle6.png">
-            <p> Fournir des espa
-                ou stocker des données sur des terminaux distants. </p>
-        </article>
-
-        <article class="etapes">
-            <img src="assets/img/img-installationVM/oracle7.png">
-            <p> Fournir des espa
-                ou stocker des données sur des terminaux distants. </p>
-        </article>
-
-        <article class="etapes">
-            <img src="assets/img/img-installationVM/oracle8.png">
-            <p> Fournir des espa
-                ou stocker des données sur des terminaux distants. </p>
-        </article>
-
-        <article class="etapes">
-            <img src="assets/img/img-installationVM/oracle9.png">
-            <p> Fournir des espa
-                ou stocker des données sur des terminaux distants. </p>
-        </article>
 
 
 
