--- a/créationVM.html
+++ b/créationVM.html
@@ -36,65 +36,73 @@
 
             <h2> Etape de la création de la Machine Virtuelle</h2>
             <article class="etapes">
-                <img src="assets/img/img-installationVM/souswindows.png">
+                <img src="assets/img/img-creationVM/vm1.png">
                 <p> Fournir des espaces de travail sécurisés et cryptés. VirtualBox sécurise les connexions à distance aux applications
                     restreintes grâce à des clés de chiffrement de 256 bits, et garantit que les utilisateurs ne peuvent pas télécharger
                     ou stocker des données sur des terminaux distants. </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-installationVM/oracle1.png">
+                <img src="assets/img/img-creationVM/vm2.png">
                 <p> Fournir des espa
                     ou stocker des données sur des terminaux distants. </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-installationVM/oracle2.png">
+                <img src="assets/img/img-creationVM/vm3.png">
                 <p> Fournir des espa
                     ou stocker des données sur des terminaux distants. </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-installationVM/oracle3.png">
+                <img src="assets/img/img-creationVM/vm4.png">
                 <p> Fournir des espa
                     ou stocker des données sur des terminaux distants. </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-installationVM/oracle4.png">
+                <img src="assets/img/img-creationVM/vm5.png">
                 <p> Fournir des espa
                     ou stocker des données sur des terminaux distants. </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-installationVM/oracle5.png">
+                <img src="assets/img/img-creationVM/vm6.png">
                 <p> Fournir des espa
                     ou stocker des données sur des terminaux distants. </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-installationVM/oracle6.png">
+                <img src="assets/img/img-creationVM/vm7.png">
                 <p> Fournir des espa
                     ou stocker des données sur des terminaux distants. </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-installationVM/oracle7.png">
+                <img src="assets/img/img-creationVM/vm8.png">
                 <p> Fournir des espa
                     ou stocker des données sur des terminaux distants. </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-installationVM/oracle8.png">
+                <img src="assets/img/img-creationVM/vm9.png">
                 <p> Fournir des espa
                     ou stocker des données sur des terminaux distants. </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-installationVM/oracle9.png">
+                <img src="assets/img/img-creationVM/vm10.png">
                 <p> Fournir des espa
                     ou stocker des données sur des terminaux distants. </p>
             </article>
+
+            <article class="etapes">
+                <img src="assets/img/img-creationVM/vm11.png">
+                <p> Fournir des espa
+                    ou stocker des données sur des terminaux distants. </p>
+            </article>
+
+
 
 
 
