--- a/installation.html
+++ b/installation.html
@@ -67,9 +67,9 @@
             <div class="image">
 
                 <a href="installationVM.html"><img src="assets/img/img-installation/VMWare-Virtual-Box.png" alt=""  /></a>
-                <a href="créationVM.html"><img src="assets/img/img-installation/VMWare-Virtual-Box.png" alt=""  /></a>
-                <a href="creationpersonne.html"><img src="assets/img/img-installation/VMWare-Virtual-Box.png" alt=""  /></a>
-                <a href="placement.html"><img src="assets/img/img-installation/VMWare-Virtual-Box.png" alt=""  /></a>
+                <a href="créationVM.html"><img src="assets/img/img-installation/crea2.webp" alt=""  /></a>
+                <a href="creationpersonne.html"><img src="assets/img/img-installation/personne.png" alt=""  /></a>
+                <a href="placement.html"><img src="assets/img/img-installation/web.png" alt=""  /></a>
             </div>
         </section>
 
