--- a/placement.html
+++ b/placement.html
@@ -43,65 +43,109 @@
 
         <h2> Etape de l'installation</h2>
         <article class="etapes">
-            <img src="assets/img/img-installationVM/souswindows.png">
+            <img src="assets/img/img-placement/img.png">
             <p> Fournir des espaces de travail sécurisés et cryptés. VirtualBox sécurise les connexions à distance aux applications
                 restreintes grâce à des clés de chiffrement de 256 bits, et garantit que les utilisateurs ne peuvent pas télécharger
                 ou stocker des données sur des terminaux distants. </p>
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-installationVM/oracle1.png">
+            <img src="assets/img/img-placement/img_1.png">
             <p> Fournir des espa
                 ou stocker des données sur des terminaux distants. </p>
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-installationVM/oracle2.png">
+            <img src="assets/img/img-placement/img_2.png">
             <p> Fournir des espa
                 ou stocker des données sur des terminaux distants. </p>
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-installationVM/oracle3.png">
+            <img src="assets/img/img-placement/img_3.png">
             <p> Fournir des espa
                 ou stocker des données sur des terminaux distants. </p>
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-installationVM/oracle4.png">
+            <img src="assets/img/img-placement/img_4.png">
             <p> Fournir des espa
                 ou stocker des données sur des terminaux distants. </p>
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-installationVM/oracle5.png">
+            <img src="assets/img/img-placement/img_5.png">
             <p> Fournir des espa
                 ou stocker des données sur des terminaux distants. </p>
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-installationVM/oracle6.png">
+            <img src="assets/img/img-placement/img_6.png">
             <p> Fournir des espa
                 ou stocker des données sur des terminaux distants. </p>
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-installationVM/oracle7.png">
+            <img src="assets/img/img-placement/img_7.png">
             <p> Fournir des espa
                 ou stocker des données sur des terminaux distants. </p>
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-installationVM/oracle8.png">
+            <img src="assets/img/img-placement/img_8.png">
             <p> Fournir des espa
                 ou stocker des données sur des terminaux distants. </p>
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-installationVM/oracle9.png">
+            <img src="assets/img/img-placement/img_9.png">
             <p> Fournir des espa
                 ou stocker des données sur des terminaux distants. </p>
         </article>
+
+        <article class="etapes">
+            <img src="assets/img/img-placement/img_10.png">
+            <p> Fournir des espa
+                ou stocker des données sur des terminaux distants. </p>
+        </article>
+
+        <article class="etapes">
+            <img src="assets/img/img-placement/img_11.png">
+            <p> Fournir des espa
+                ou stocker des données sur des terminaux distants. </p>
+        </article>
+
+        <article class="etapes">
+            <img src="assets/img/img-placement/img_12.png">
+            <p> Fournir des espa
+                ou stocker des données sur des terminaux distants. </p>
+        </article>
+
+        <article class="etapes">
+            <img src="assets/img/img-placement/img_13.png">
+            <p> Fournir des espa
+                ou stocker des données sur des terminaux distants. </p>
+        </article>
+
+        <article class="etapes">
+            <img src="assets/img/img-placement/img_14.png">
+            <p> Fournir des espa
+                ou stocker des données sur des terminaux distants. </p>
+        </article>
+
+        <article class="etapes">
+            <img src="assets/img/img-placement/img_15.png">
+            <p> Fournir des espa
+                ou stocker des données sur des terminaux distants. </p>
+        </article>
+
+        <article class="etapes">
+            <img src="assets/img/img-placement/img_16.png">
+            <p> Fournir des espa
+                ou stocker des données sur des terminaux distants. </p>
+        </article>
+
+
 
 
 
