--- a/machine.html
+++ b/machine.html
@@ -21,10 +21,10 @@
       <a href="index.html">Accueil</a>
     </div>
     <div class="nav-container">
-      <a href="machine.html">definition</a>
+      <a href="machine.html">Definition</a>
     </div>
     <div class="nav-container">
-      <a href="installation.html">installation</a>
+      <a href="installation.html">Installation</a>
     </div>
   </nav>
   <!-----------------end nav bar-------------------->
