--- a/créationVM.html
+++ b/créationVM.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" href="assets/css/installationVM.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <header>
     <!-------------------nav bar-------------------->
@@ -22,10 +21,10 @@
             <a href="index.html">Accueil</a>
         </div>
         <div class="nav-container">
-            <a href="machine.html">definition</a>
+            <a href="machine.html">Definition</a>
         </div>
         <div class="nav-container">
-            <a href="installation.html">installation</a>
+            <a href="installation.html">Installation</a>
         </div>
     </nav>
     <!-----------------end nav bar-------------------->
