--- a/installation.html
+++ b/installation.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" href="assets/css/installation.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <header>
     <!-------------------nav bar-------------------->
@@ -22,10 +21,10 @@
             <a href="index.html">Accueil</a>
         </div>
         <div class="nav-container">
-            <a href="machine.html">definition</a>
+            <a href="machine.html">Definition</a>
         </div>
         <div class="nav-container">
-            <a href="installation.html">installation</a>
+            <a href="installation.html">Installation</a>
         </div>
     </nav>
     <!-----------------end nav bar-------------------->
@@ -56,6 +55,7 @@
                 et l'installation d'un OS notamment avec Mint
             </p>
             <br>
+            <img src="assets/img/img-installation/diagramme.png">
         </section>
 
         <section id="actions">
@@ -65,11 +65,22 @@
             </h2>
             <br><br>
             <div class="image">
-
-                <a href="installationVM.html"><img src="assets/img/img-installation/VMWare-Virtual-Box.png" alt=""  /></a>
-                <a href="créationVM.html"><img src="assets/img/img-installation/crea2.webp" alt=""  /></a>
-                <a href="creationpersonne.html"><img src="assets/img/img-installation/personne.png" alt=""  /></a>
-                <a href="placement.html"><img src="assets/img/img-installation/web.png" alt=""  /></a>
+                <figure>
+                    <a href="installationVM.html"><img src="assets/img/img-installation/VMWare-Virtual-Box.png" alt=""  /></a>
+                    <figcaption>Installation d'une machine virtuelle</figcaption>
+                </figure>
+                <figure>
+                    <a href="créationVM.html"><img src="assets/img/img-installation/crea2.webp" alt=""  /></a>
+                    <figcaption>Création d'une machine virtuelle</figcaption>
+                </figure>
+                <figure>
+                    <a href="creationpersonne.html"><img src="assets/img/img-installation/personne2.avif" alt=""  /></a>
+                    <figcaption>Ajout d'administrateur, utilisateur, groupe</figcaption>
+                </figure>
+                <figure>
+                    <a href="placement.html"><img src="assets/img/img-installation/web1.png" alt=""  /></a>
+                    <figcaption>Hébergement d'un site web sur machine virtuelle</figcaption>
+                </figure>
             </div>
         </section>
 
